# Ferrovisor

./: .gitignore  Cargo.toml  LOGO.md  Makefile  README.md  README.zh-CN.md  STRUCTURE.md  TODO.md  build.rs  lib.rs  main.rs  openconf.cfg  rust-toolchain.toml
arch/: cpu.rs  mod.rs
arch/arm32/: mod.rs
arch/arm32/cpu/: mod.rs
arch/arm64/: mod.rs  tests.rs
arch/arm64/cpu/: entry.S  entry.rs  features.rs  init.rs  mod.rs  regs.rs  state.rs  wfe.rs  wfi.rs
arch/arm64/devtree/: mod.rs  parse.rs  vm_fdt.rs
arch/arm64/interrupt/: gic.rs  gic_discovery.rs  handlers.rs  mod.rs  routing.rs  vectors.S  vgic.rs  virq.rs
arch/arm64/mmu/: attrs.rs  fault.rs  gstage.rs  mod.rs  operations.rs  stage2.rs  translate.rs  vtcr.rs  vttbr.rs
arch/arm64/platform/: foundation_v8.rs  mod.rs  qemu_virt.rs
arch/arm64/psci/: cpu_state.rs  mod.rs  smccc.rs
arch/arm64/smp/: hotplug.rs  init.rs  mod.rs  psci.rs  spin_table.rs
arch/arm64/timer/: generic.rs  htimer.rs  mod.rs  virtual_timer.rs
arch/common/: mod.rs
assets/logos/: LOGO.md  README.md
config/: mod.rs
core/: mod.rs
core/irq/: affinity.rs  chip.rs  exception.rs  handler.rs  mod.rs  msi.rs
core/mm/: allocator.rs  buddy.rs  frame.rs  gstage.rs  heap.rs  hugepage.rs  mod.rs  page.rs  slab.rs
core/sched/: fifo.rs  mod.rs  rr.rs  scheduler.rs
core/sync/: mod.rs  mutex.rs  spinlock.rs
core/vmm/: mod.rs  vcpu.rs  vm.rs  vmcs.rs
docs/: README.md  REFACTOR_PLAN.md  arm-TODO.md  index.md
docs/riscv/: README-zh.md  README.md  SUMMARY-zh.md  SUMMARY.md  address-translation-zh.md  address-translation.md  csrs-zh.md  csrs.md  exceptions-zh.md  exceptions.md  instructions-zh.md  instructions.md
drivers/: mod.rs
drivers/base/: mod.rs
drivers/platform/: gpio.rs  mod.rs  timer.rs
drivers/virtio/: console.rs  gpu.rs  input.rs  mod.rs  net.rs
emulator/: mod.rs
emulators/gpio/: mod.rs
emulators/rtc/: mod.rs
emulators/uart/: mod.rs
libs/: mod.rs
src/: lib.rs  main.rs
src/arch/: mod.rs
src/arch/riscv64/: Cargo.toml  mod.rs
src/arch/riscv64/cpu/: csr.rs  features.rs  state.rs
src/arch/riscv64/debug/: breakpoint.rs  mod.rs  tracer.rs  vm_debug.rs
src/arch/riscv64/devtree/: fdt.rs  mod.rs  parser.rs
src/arch/riscv64/interrupt/: handler.rs  mod.rs
src/arch/riscv64/mmu/: memory.rs  mod.rs  ptable.rs  translation.rs
src/arch/riscv64/platform/: config.rs  mod.rs  plic.rs
src/arch/riscv64/smp/: boot.rs  mod.rs  sbi.rs
src/arch/riscv64/virtualization/: hextension.rs  mod.rs  vm.rs
src/arch/riscv64/virtualization/devices/: mod.rs  nic.rs  platform.rs  virtio.rs
src/config/: mod.rs
src/core/: ferro_core.rs  mod.rs
src/core/mm/: slab.rs  (+2 more)
src/drivers/: mod.rs
src/emulator/: mod.rs
src/utils/: console.rs  list.rs  log.rs  mod.rs
utils/: bitmap.rs  console.rs  log.rs  mod.rs  random.rs  time.rs
(+88 files in other folders)
